Make booking requests more consistent
