# openapi.yaml
@@ -283,11 +283,18 @@ paths:
         "400":
           description: Bad request (e.g., validation errors).
 
-  /bookings/delete:
+  /bookings/{bookingId}/delete:
     post:
       tags:
         - Booking
       summary: Cancel a booking
+      parameters:
+        - name: bookingId
+          in: path
+          description: The booking ID obtained in the list of bookings.
+          required: true
+          schema:
+            type: string
       requestBody:
         required: true
         content:
@@ -606,9 +613,6 @@ components:
           type: string
           description: Device code obtained from authorization
           example: "3L10NA9Q7"
-        bookingId:
-          type: string
-          description: The booking ID obtained in the list of bookings.
       required:
         - deviceCode
         - bookingId
